--- a/card.html
+++ b/card.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
     <link rel="stylesheet" href="./css/main.css" />
+    <link rel="icon" type="image/png" href="./img/icon/favicon.png" />
   </head>
   <body>
     <button id="open-modal-btn">Trade a card</button>
@@ -40,10 +41,10 @@
           <a href="index.html">Home</a>
         </li>
         <li>
-          <a href="details.html">Details</a>
+          <a href="details.html">Collection</a>
         </li>
         <li>
-          <a href="profil.html">Profil</a>
+          <a href="profil.html">Profile</a>
         </li>
       </nav>
       <button class="Darkmode">DarkMode</button>
@@ -57,10 +58,10 @@
         <a href="index.html">Home</a>
       </li>
       <li>
-        <a href="details.html">Details</a>
+        <a href="details.html">Collection</a>
       </li>
       <li>
-        <a href="profil.html">Profil</a>
+        <a href="profil.html">Profile</a>
       </li>
       <button class="darkmode">DarkMode</button>
     </div>
@@ -106,11 +107,11 @@
       <div class="footer-content">
         <p>Contact me : nathan.boisleux@gmail.com</p>
         <div class="legal-links">
-          <a href="#">Mentions légales</a>
-          <a href="#">Politique de confidentialité</a>
-          <a href="#">Conditions d'utilisation</a>
+          <a href="#">Legal Notice</a>
+          <a href="#">Privacy Policy</a>
+          <a href="#">Terms of use</a>
         </div>
-        <p>© 2024 Boisleux Nathan. Tous droits réservés.</p>
+        <p>© 2024 Boisleux Nathan. All rights reserved.</p>
       </div>
     </footer>
 
