--- a/details.html
+++ b/details.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Details</title>
     <link rel="stylesheet" href="./css/main.css" />
+    <link rel="icon" type="image/png" href="./img/icon/favicon.png" />
   </head>
   <body>
     <button id="open-modal-btn">Trade a card</button>
@@ -40,17 +41,11 @@
           <a href="index.html">Home</a>
         </li>
         <li>
-          <a href="details.html">Details</a>
+          <a href="details.html">Collection</a>
         </li>
         <li>
-          <a href="profil.html">Profil</a>
+          <a href="profil.html">Profile</a>
         </li>
-        <!-- <li>
-          <a href="register.html">Register</a>
-        </li>
-        <li>
-          <a href="login.html">Login</a>
-        </li> -->
       </nav>
       <button class="Darkmode">DarkMode</button>
     </header>
@@ -63,10 +58,10 @@
         <a href="index.html">Home</a>
       </li>
       <li>
-        <a href="details.html">Details</a>
+        <a href="details.html">Collection</a>
       </li>
       <li>
-        <a href="profil.html">Profil</a>
+        <a href="profil.html">Profile</a>
       </li>
       <button class="darkmode">DarkMode</button>
     </div>
@@ -114,7 +109,7 @@
           type="text"
           name="search"
           value=""
-          placeholder="Search a card.."
+          placeholder="Search a card by name..."
           data-search=""
         />
       </section>
@@ -128,7 +123,7 @@
             src="https://img.icons8.com/color/48/000000/gryffindor.png"
             alt="gryffindor"
           />
-          Gryffondor
+          Gryffindor
         </button>
         <button class="maison-btn" data-maison="Slytherin">
           <img
@@ -137,7 +132,7 @@
             src="https://img.icons8.com/color/48/000000/slytherin.png"
             alt="slytherin"
           />
-          Serpentard
+          Slytherin
         </button>
         <button class="maison-btn" data-maison="Ravenclaw">
           <img
@@ -146,7 +141,7 @@
             src="https://img.icons8.com/color/48/000000/ravenclaw.png"
             alt="ravenclaw"
           />
-          Serdaigle
+          Ravenclaw
         </button>
         <button class="maison-btn" data-maison="Hufflepuff">
           <img
@@ -155,9 +150,9 @@
             src="https://img.icons8.com/color/48/000000/hufflepuff.png"
             alt="hufflepuff"
           />
-          Poufsouffle
+          Hufflepuff
         </button>
-        <button id="reset">Tout afficher</button>
+        <button id="reset">Show All</button>
       </div>
 
       <!-- liste des cartes -->
@@ -168,11 +163,11 @@
       <div class="footer-content">
         <p>Contact me : nathan.boisleux@gmail.com</p>
         <div class="legal-links">
-          <a href="#">Mentions légales</a>
-          <a href="#">Politique de confidentialité</a>
-          <a href="#">Conditions d'utilisation</a>
+          <a href="#">Legal Notice</a>
+          <a href="#">Privacy Policy</a>
+          <a href="#">Terms of use</a>
         </div>
-        <p>© 2024 Boisleux Nathan. Tous droits réservés.</p>
+        <p>© 2024 Boisleux Nathan. All rights reserved.</p>
       </div>
     </footer>
 
