--- a/register.html
+++ b/register.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
     <link rel="stylesheet" href="./css/main.css" />
+    <link rel="icon" type="image/png" href="./img/icon/favicon.png" />
   </head>
   <body>
     <header>
-      <h2>Harry Potter Cards</h2>
+      <h2><span>H</span>arry <span>P</span>otter <span>C</span>ards</h2>
       <button class="Darkmode">Darkmode</button>
     </header>
 
@@ -20,10 +21,10 @@
         <a href="index.html">Home</a>
       </li>
       <li>
-        <a href="details.html">Details</a>
+        <a href="details.html">Collection</a>
       </li>
       <li>
-        <a href="profil.html">Profil</a>
+        <a href="profil.html">Profile</a>
       </li>
       <button class="darkmode">DarkMode</button>
     </div>
@@ -69,14 +70,14 @@
       </div>
       <div class="message-success">
         <ul>
-          <li>Formulaire envoyé</li>
+          <li>Account Created !</li>
         </ul>
       </div>
       <form method="POST" id="reg-form">
         <h2>Register</h2>
         <div class="form">
           <div class="reg-name">
-            <p>Name</p>
+            <p>Pseudo</p>
             <input type="text" id="reg-name" placeholder="Harry7832" />
           </div>
           <div class="reg-email">
@@ -109,11 +110,11 @@
       <div class="footer-content">
         <p>Contact me : nathan.boisleux@gmail.com</p>
         <div class="legal-links">
-          <a href="#">Mentions légales</a>
-          <a href="#">Politique de confidentialité</a>
-          <a href="#">Conditions d'utilisation</a>
+          <a href="#">Legal Notice</a>
+          <a href="#">Privacy Policy</a>
+          <a href="#">Terms of use</a>
         </div>
-        <p>© 2024 Boisleux Nathan. Tous droits réservés.</p>
+        <p>© 2024 Boisleux Nathan. All rights reserved.</p>
       </div>
     </footer>
 
